--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.30.0
+brotli==1.2.0
 cachetools==6.2.2
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
 coloredlogs==15.0.1
+cssselect2==0.8.0
+fastapi==0.122.0
 filetype==1.2.0
 flatbuffers==25.9.23
+fonttools==4.60.1
 google-ai-generativelanguage==0.6.15
 google-api-core==2.28.1
 google-api-python-client==2.187.0
@@ -24,16 +31,18 @@ httplib2==0.31.0
 httpx==0.28.1
 humanfriendly==10.0
 idna==3.11
+iniconfig==2.3.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.0.8
-langchain-core==0.3.80
+langchain-core==1.1.0
 langchain-google-genai==2.0.10
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.9
 langsmith==0.4.45
+Markdown==3.10
 markdown-it-py==4.0.0
 mdurl==0.1.2
 mpmath==1.3.0
@@ -44,21 +53,28 @@ orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
 pgvector==0.4.1
+pillow==12.0.0
+pluggy==1.6.0
 proto-plus==1.26.1
 protobuf==5.29.5
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.23
 pydantic==2.12.4
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pydyf==0.11.0
 Pygments==2.19.2
 PyMuPDF==1.26.6
 pymupdf-layout==1.26.6
 pymupdf4llm==0.2.2
 pyparsing==3.2.5
+pyphen==0.17.2
 pyreadline3==3.5.4
+pytest==9.0.1
 python-dotenv==1.2.1
+python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
 requests-toolbelt==1.0.0
@@ -67,14 +83,20 @@ rsa==4.9.1
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 sqlmodel==0.0.27
+starlette==0.50.0
 sympy==1.14.0
 tabulate==0.9.0
 tenacity==9.1.2
+tinycss2==1.5.1
+tinyhtml5==2.0.0
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uritemplate==4.2.0
 urllib3==2.5.0
+uvicorn==0.38.0
+weasyprint==66.0
+webencodings==0.5.1
 xxhash==3.6.0
+zopfli==0.4.0
 zstandard==0.25.0
-weasyprint==61.0
